--- a/portfolio.html
+++ b/portfolio.html
@@ -283,8 +283,21 @@
                 </li>
             </ul>
         </div>
+        <div class="subscribe">
+            <h3 class="subscribe__title">Підпишіться на розсилку</h3>
+            <div class="button-div">
+                <input type="text" placeholder="E-mail" class="subscribe__input" />
+                <button class="subscribe__button">
+                    Підписатися
+                    <svg class="svg-send__icon-send" height="24" width="24">
+                        <use href="./images/sprite.svg#icon-send"></use>
+                    </svg>
+                </button>
+            </div>
+        </div>
     </div>
 </footer>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
