--- a/portfolio.html
+++ b/portfolio.html
@@ -284,16 +284,16 @@
             </ul>
         </div>
         <div class="subscribe">
-            <h3 class="subscribe__title">Підпишіться на розсилку</h3>
-            <div class="button-div">
+            <p class="subscribe__title">Підпишіться на розсилку</p>
+            <form class="button-div">
                 <input type="text" placeholder="E-mail" class="subscribe__input" />
-                <button class="subscribe__button">
+                <button type="submit" class="subscribe__button">
                     Підписатися
                     <svg class="svg-send__icon-send" height="24" width="24">
                         <use href="./images/sprite.svg#icon-send"></use>
                     </svg>
                 </button>
-            </div>
+            </form>
         </div>
     </div>
 </footer>
